Attempts to fix overlapping text in article card

--- a/src/app/static/css/feed.less
+++ b/src/app/static/css/feed.less
@@ -1,3 +1,7 @@
 .article-desc{
 	padding-left: 2%;
 }
+
+.collapsible-header{
+	overflow: hidden;
+}
